Rezervasyon kaydederken payment kaydediyor guest kaydetmiyor, Gradle a geçildi.